# CSVX

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml
profiles/: README.md  solar_monthly.json
src/: cli.rs  error.rs  grid.rs  lib.rs  log.rs  main.rs
src/app/: mod.rs  pipeline.rs  scan.rs
src/config/: mod.rs
src/dao/: mod.rs  mssql.rs  row.rs
src/decoder/: encoding.rs  mod.rs
src/profile/: learn.rs  match_rules.rs  mod.rs  signature.rs
src/reader/: csv.rs  mod.rs  xlsx.rs
src/reshape/: anchor.rs  calendar.rs  cast.rs  header.rs  mod.rs  unpivot.rs
tests/: e2e_dry_run.rs  profile_loading.rs  profile_routing.rs
