[package]
name = "solar_monitoring_import"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Template-driven CSV/XLSX import engine for solar monitoring monthly reports"
license = "MIT"

[lib]
name = "solar_monitoring_import"
path = "src/lib.rs"

[[bin]]
name = "import"
path = "src/main.rs"

[dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
figment            = { version = "0.10", features = ["toml", "env"] }
dotenvy            = "0.15"
clap               = { version = "4.5", features = ["derive"] }
encoding_rs        = "0.8"
csv                = "1.3"
calamine           = "0.26"
tiberius           = { version = "0.12", default-features = false, features = ["chrono", "rust_decimal", "tds73"] }
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "fs", "io-util"] }
tokio-util         = { version = "0.7", features = ["compat"] }
async-trait        = "0.1"
rust_decimal       = { version = "1", features = ["serde"] }
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"
anyhow             = "1"
thiserror          = "1"
sha1               = "0.10"
hex                = "0.4"
walkdir            = "2"
glob               = "0.3"

[dev-dependencies]
pretty_assertions = "1"
tempfile          = "3"
insta             = { version = "1", features = ["json"] }
mockall           = "0.13"

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
opt-level     = "z"
